--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@heroicons/react": "^2.2.0",
     "@tailwindcss/vite": "^4.1.4",
     "@types/react-router-dom": "^5.3.3",
     "@types/yup": "^0.32.0",
@@ -16,8 +17,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "formik": "^2.4.6",
-    "react": "^19.1.0",
-    "react-dom": "^19.1.0",
+    "react-dom": "19.0.0-beta-26f2496093-20240514",
     "react-hot-toast": "^2.5.2",
     "react-router-dom": "^7.5.1",
     "yup": "^1.6.1"
@@ -35,6 +35,7 @@
     "eslint-plugin-react-refresh": "^0.4.19",
     "globals": "^16.0.0",
     "postcss": "^8.5.3",
+    "react": "19.0.0-beta-26f2496093-20240514",
     "tailwindcss": "^4.1.4",
     "typescript": "~5.7.2",
     "typescript-eslint": "^8.26.1",
