--- a/package.json
+++ b/package.json
@@ -11,12 +11,15 @@
   "dependencies": {
     "@heroicons/react": "^2.2.0",
     "@tailwindcss/vite": "^4.1.4",
+    "@tanstack/react-query": "^5.76.1",
     "@types/react-router-dom": "^5.3.3",
     "@types/yup": "^0.32.0",
     "axios": "^1.8.4",
+    "chart.js": "^4.4.9",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "formik": "^2.4.6",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "19.0.0-beta-26f2496093-20240514",
     "react-hot-toast": "^2.5.2",
     "react-router-dom": "^7.5.1",
